# local-pdf-toolbox

./: .gitattributes  .gitignore  AGENTS.md  PLAN.md  README.md  app.py  launcher.py  pdf_merge.py  pyproject.toml  update-config.json
docs/: README.md  acceptance-results.md  implementation-plan.md  release-and-update.md  requirements.md
packaging/: installer.iss  pdf_toolbox.spec  required_toolbox_modules.txt  version_info.txt
pdf_toolbox/: __init__.py  config.py  errors.py  filenames.py  pdf.py  preview.py  self_test.py  updater.py
pdf_toolbox/features/: __init__.py  merge.py  pdf_to_images.py
pdf_toolbox/ui/: __init__.py  home.py  merge.py  pdf_grid.py  pdf_items.py  pdf_to_images.py  shutdown_notice.py
pdf_toolbox/ui/pdf_grid_frontend/: index.html  main.js  streamlit-protocol.js  styles.css
scripts/: build.ps1  verify-release.ps1  verify-upgrade.ps1
tests/: test_app.py  test_launcher.py  test_packaging.py  test_pdf_grid.py  test_pdf_merge.py  test_pdf_to_images.py  test_preview.py  test_updater.py
updates/: update.json
