[project]
name = "pdf-merger"
version = "0.1.0"
description = "A local Streamlit tool for merging PDF files in memory."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "packaging>=26,<27",
    "pypdf>=6.0,<7",
    "pypdfium2>=5.11,<6",
    "streamlit>=1.45,<2",
    "streamlit-dnd>=0.1.1,<0.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21,<7",
    "pytest>=8.3,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
