[project]
name = "pdf-merger"
version = "0.2.1"
description = "A local Streamlit toolbox for processing PDF files in memory."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "packaging>=26,<27",
    "pypdf>=6.0,<7",
    "pypdfium2>=5.11,<6",
    "streamlit>=1.59,<2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21,<7",
    "pytest>=8.3,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
